[package]
name = "s4"
description = "Simpler Simple Storage Service: high-level API extensions for Rusoto's S3Client"
version = "0.0.15"
documentation = "https://docs.rs/s4"
repository = "https://gitlab.com/ddboline/s4"
authors = ["Peter Gerber <peter@arbitrary.ch>"]
license = "LGPL-3.0+"
readme = "README.md"
keywords = ["AWS", "S3"]
edition = "2018"

[badges]
github = { repository = "pgerber/s4" }

[dependencies]
thiserror = "1.0"
log = "0.4"
fallible-iterator = "0.2"
futures = "0.3"
rusoto_core = { version = "0.43.0-beta.1", default_features = false }
rusoto_credential = {version = "0.43.0-beta.1"}
rusoto_s3 = { version = "0.43.0-beta.1", default_features = false }
tokio = {version="0.2", features=["fs", "io-util", "stream"]}
async-trait = "0.1"
parking_lot = "0.10"
lazy_static = "1.4"

[dev-dependencies]
tempdir = "0.3"
rand = "0.7"
rand_xorshift = "0.2"
env_logger = "0.7"
quickcheck = "0.9"

[features]
default = ["rustls"]
rustls = ["rusoto_core/rustls", "rusoto_core/rustls"]
native-tls = ["rusoto_core/native-tls", "rusoto_s3/native-tls"]
