[package]
name = "s3-ext"
description = "Simple Storage Service Extensions for Rust"
version = "0.4.0"
documentation = "https://docs.rs/s3-ext"
repository = "https://github.com/ddboline/s3-ext-rs"
authors = ["Daniel Boline <ddboline@gmail.com>", "Peter Gerber <peter@arbitrary.ch>"]
license = "LGPL-3.0+"
readme = "README.md"
keywords = ["AWS", "S3"]
edition = "2018"

[badges]
github = { repository = "ddboline/s3-ext" }

[dependencies]
thiserror = "1.0"
log = "0.4"
futures = "0.3"
rusoto_core = { version = "0.47", default_features = false }
rusoto_credential = {version = "0.47", default_features = false}
rusoto_s3 = { version = "0.47", default_features = false }
tokio = {version="1.8", features=["fs", "io-util"]}
async-trait = "0.1"
parking_lot = "0.11"
lazy_static = "1.4"

[dev-dependencies]
tempdir = "0.3"
rand = "0.8"
rand_xorshift = "0.3"
env_logger = "0.9"

[features]
default = ["rustls"]
rustls = ["rusoto_core/rustls", "rusoto_core/rustls"]
native-tls = ["rusoto_core/native-tls", "rusoto_s3/native-tls"]
